# rock

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  setup.py
cmake/: PracticalCIProject.cmake
conda/: condaenv.yaml
cpp/: CMakeLists.txt
cpp/cmake/: PracticalCIProject.cmake
cpp/doc/: CMakeLists.txt
cpp/include/org/rock/core/: D.h
cpp/include/rock/core/: A.h  B.h  C.h  D.h
cpp/src/core/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  E.h  core_python_bindings.cpp
cpp/test/: CMakeLists.txt  test_rock.cpp
cpp/test/core/: CMakeLists.txt  test_core.cpp
cpp/tests/: test_rock.cpp
cpp/tests/core/: CMakeLists.txt  test_core.cpp  test_core.py
include/org/rock/core/: A.h  B.h  C.h
python/: setup.py
python/tests/: test_rock.py
src/cpp/core/: A.cpp  E.h  core_python_bindings.cpp
tests/cpp/core/: test_core.cpp
tests/python/core/: test_core.py
